# ShapeTransfer

MeshTransfer/: BVH.cpp  BVH.h  Box.cpp  Box.h  CMakeLists.txt  Edge.cpp  Edge.h  Makefile  Mesh.cpp  Mesh.h  Ray.cpp  Ray.h  Singular_Value_Decomposition_Givens_QR_Factorization_Kernel.hpp  Singular_Value_Decomposition_Main_Kernel_Body.hpp  Singular_Value_Decomposition_Preamble.hpp  Skeleton.cpp  Skeleton.h  Triangle.cpp  Triangle.h  Vertex.h  WunderSVD3x3.cpp  WunderSVD3x3.h  main.cpp
SkeletonRegisterer/: CMakeLists.txt  Edge.cpp  Edge.h  GA.cpp  GA.h  Makefile  Skeleton.cpp  Skeleton.h  Vertex.cpp  Vertex.h  main.cpp
